--- a/app/views/static_pages/_new_bc_form.html.erb
+++ b/app/views/static_pages/_new_bc_form.html.erb
@@ -2,52 +2,92 @@
 
 	<div class="form-group new-form-group">
 		<%= b.label 'print_method' %>
-		<%= b.select 'print_method_id', options_for_select(print_methods), {}, {"ng-model" => "data.print_method_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% if flash[:error_redirect] == true %>
+			<%= b.select 'print_method_id', options_for_select( print_methods, print_methods[flash[:print_method_id].to_i] ), {}, {"class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% else %>
+			<%= b.select 'print_method_id', options_for_select(print_methods), {}, {"ng-model" => "data.print_method_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% end %>
 	</div>
 
 	<div class="form-group new-form-group">
 		<%= b.label 'ink_colors' %>
-		<%= b.select 'ink_color_id', options_for_select(ink_colors), {}, {"ng-model" => "data.ink_color_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% if flash[:error_redirect] == true %>
+			<%= b.select 'ink_color_id', options_for_select( ink_colors, ink_colors[flash[:ink_color_id].to_i] ), {}, {"class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% else %>
+			<%= b.select 'ink_color_id', options_for_select(ink_colors), {}, {"ng-model" => "data.ink_color_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% end %>
 	</div>
 
 	<div class="form-group new-form-group">
 		<%= b.label 'bleeds' %>
-		<%= b.select 'bleed_id', options_for_select(bleeds), {}, {"ng-model" => "data.bleed_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% if flash[:error_redirect] == true %>
+			<%= b.select 'bleed_id', options_for_select( bleeds, bleeds[flash[:bleed_id].to_i - 1] ), {}, {"class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% else %>
+			<%= b.select 'bleed_id', options_for_select(bleeds), {}, {"ng-model" => "data.bleed_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% end %>
 	</div>
 
 	<div class="form-group new-form-group">
 		<%= b.label 'raised_inks' %>
-		<%= b.select 'raised_ink_id', options_for_select(raised_inks), {}, {"ng-model" => "data.raised_ink_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% if flash[:error_redirect] == true %>
+			<%= b.select 'raised_ink_id', options_for_select( raised_inks, raised_inks[flash[:raised_ink_id].to_i - 1] ), {}, {"class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% else %>
+			<%= b.select 'raised_ink_id', options_for_select(raised_inks), {}, {"ng-model" => "data.raised_ink_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% end %>
 	</div>
 
 	<div class="form-group new-form-group">
 		<%= b.label 'dimensions' %><a class="edit-menu" href="/dimensions"><i class="edit glyphicon glyphicon-plus"></i></a>
-		<%= b.select 'dimension_id', options_for_select(dimensions), {}, {"ng-model" => "data.dimensions_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% if flash[:error_redirect] == true %>
+			<%= b.select 'dimension_id', options_for_select( dimensions, dimensions[flash[:dimension_id].to_i - 1] ), {}, {"class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% else %>
+			<%= b.select 'dimension_id', options_for_select(dimensions), {}, {"ng-model" => "data.dimensions_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% end %>
 	</div>
 
 	<div class="form-group new-form-group">
 		<%= b.label 'coatings' %><a class="edit-menu" href="/coatings"><i class="edit glyphicon glyphicon-plus"></i></a>
-		<%= b.select 'coating_id', options_for_select(coatings), {}, {"ng-model" => "data.coating_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% if flash[:error_redirect] == true %>
+			<%= b.select 'coating_id', options_for_select( coatings, coatings[flash[:coating_id].to_i - 1] ), {}, {"class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% else %>
+			<%= b.select 'coating_id', options_for_select(coatings), {}, {"ng-model" => "data.coating_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% end %>
 	</div>
 
 	<div class="form-group new-form-group">
 		<%= b.label 'quantities' %><a class="edit-menu" href="/quantities"><i class="edit glyphicon glyphicon-plus"></i></a>
-		<%= b.select 'quantity_id', options_for_select(quantities), {}, {"ng-model" => "data.quantity_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% if flash[:error_redirect] == true %>
+			<%= b.select 'quantity_id', options_for_select( quantities, quantities[flash[:quantity_id].to_i] ), {}, {"class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% else %>
+			<%= b.select 'quantity_id', options_for_select(quantities), {}, {"ng-model" => "data.quantity_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% end %>
 	</div>
 
 	<div class="form-group new-form-group">
 		<%= b.label 'box_counts' %><a class="edit-menu" href="/box_counts"><i class="edit glyphicon glyphicon-plus"></i></a>
+		<% if flash[:error_redirect] == true %>
+			<%= b.select 'box_count_id', options_for_select( box_counts, box_counts[flash[:box_count_id].to_i] ), {}, {"class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% else %>
 		<%= b.select 'box_count_id', options_for_select(box_counts), {}, {"ng-model" => "data.box_count_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% end %>
 	</div>
 
 	<div class="form-group new-form-group">
 		<%= b.label 'metals' %><a class="edit-menu" href="/metals"><i class="edit glyphicon glyphicon-plus"></i></a>
-		<%= b.select 'metal_id', options_for_select(metals), {}, {"ng-model" => "data.metal_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% if flash[:error_redirect] == true %>
+			<%= b.select 'metal_id', options_for_select( metals, metals[flash[:metal_id].to_i - 1] ), {}, {"class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% else %>
+			<%= b.select 'metal_id', options_for_select(metals), {}, {"ng-model" => "data.metal_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% end %>
 	</div>
 
 	<div class="form-group new-form-group">
 		<%= b.label 'paper_types' %><a class="edit-menu" href="/paper_types"><i class="edit glyphicon glyphicon-plus"></i></a>
-		<%= b.select 'paper_type_id', options_for_select(paper_types), {}, {"ng-model" => "data.paper_type_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% if flash[:error_redirect] == true %>
+			<%= b.select 'paper_type_id', options_for_select( paper_types, paper_types[flash[:paper_type_id].to_i] ), {}, {"class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% else %>
+			<%= b.select 'paper_type_id', options_for_select(paper_types), {}, {"ng-model" => "data.paper_type_id", "class" => "form-control new-form-control", 'dir' => 'rtl'} %>
+		<% end %>
 	</div>
 
 	<br>
