--- a/app/views/static_pages/new_bc.js.erb
+++ b/app/views/static_pages/new_bc.js.erb
@@ -4,6 +4,7 @@ $('.similar-header').removeClass("hide");
 $('.similar-products').append("<%= j similar_products( @similar ) %>");
 $('.alert').empty();
 $('.alert-error').empty();
+$('.business-card-errors').empty();
 
 if ( parseInt("<%= @count %>") <= 5) {
 	$('.load-more').addClass("hide");
